--- a/src/Resources/views/Action/obtain_payment_method_nonce.html.twig
+++ b/src/Resources/views/Action/obtain_payment_method_nonce.html.twig
@@ -135,10 +135,10 @@
                         updatePayButton(PAY_NOW, false);
                     });
 
-                    dropinInstance.on('noPaymentMethodRequestable', function () {
+                    /*dropinInstance.on('noPaymentMethodRequestable', function () {
                         //console.log('noPaymentMethodRequestable');
-                        updatePayButton('', true);
-                    });
+                        //updatePayButton('', true);
+                    });*/
                 });
             }
         </script>
