add card holder required field & cvv masked input & vault manager

--- a/src/Resources/views/Action/obtain_payment_method_nonce.html.twig
+++ b/src/Resources/views/Action/obtain_payment_method_nonce.html.twig
@@ -40,6 +40,24 @@
                 braintree.dropin.create({
                     authorization: {{ clientToken|json_encode|raw }},
                     container: '#dropin-container',
+                    card: {
+                        cardholderName: {
+                            required: true
+                        },
+                        overrides: {
+                            fields: {
+                                /*number: {
+                                    maskInput: {
+                                        showLastFour: true
+                                    }
+                                },*/
+                                cvv: {
+                                    maskInput: true
+                                }
+                            }
+                        }
+                    },
+                    vaultManager: true,
                     paypal: {
                         //flow: 'vault'
                         flow: 'checkout',
