--- a/src/Resources/views/Action/obtain_payment_method_nonce.html.twig
+++ b/src/Resources/views/Action/obtain_payment_method_nonce.html.twig
@@ -4,10 +4,10 @@
 
     {% block braintree_payment_form %}
         <div id="dropin-container"></div>
-        <form method="POST" action="{{ formAction }}" id="payment-form">
+        <form method="POST" action="{{ formAction }}" id="braintree-payment-form">
             <input type="hidden" name="payment_method_nonce" id="payment_method_nonce" value="" />
         </form>
-        <button type="submit" class="btn btn-default" disabled="disabled" id="payment-button">Loading...</button>
+        <button type="submit" class="btn btn-default" disabled="disabled" id="braintree-payment-button">Loading...</button>
     {% endblock %}
 
     {% block braintree_init_js %}
@@ -18,10 +18,9 @@
             s.onload = setupForm;
             document.getElementsByTagName('head')[0].appendChild(s);
 
-            var payBtn = document.querySelector('#payment-button');
-            var form = document.querySelector('#payment-form');
-
-            const PAY_NOW = 'Pay';
+            const payBtn = document.querySelector('#braintree-payment-button'),
+                braintreePaymentForm = document.querySelector('#braintree-payment-form'),
+                BT_PAY_NOW = 'Pay';
 
             function updatePayButton(text, disabled) {
                 if (typeof text !== 'undefined' && text !== '') {
@@ -107,7 +106,7 @@
 
                     document.dispatchEvent(new Event('dropin.created'));
 
-                    updatePayButton(PAY_NOW);
+                    updatePayButton(BT_PAY_NOW);
 
                     payBtn.addEventListener('click', function () {
                         updatePayButton('Processing...', true);
@@ -116,14 +115,14 @@
                             // Submit payload.nonce to your server
                             if (requestPaymentMethodErr) {
                                 console.error(requestPaymentMethodErr);
-                                updatePayButton(PAY_NOW, false);
+                                updatePayButton(BT_PAY_NOW, false);
                                 return;
                             }
 
                             document.querySelector('#payment_method_nonce').value = payload.nonce;
 
                             if (payload.type !== 'CreditCard') {
-                                form.submit();
+                                braintreePaymentForm.submit();
                                 return;
                             }
 
@@ -134,13 +133,13 @@
                             if (!payload.liabilityShifted) {
                                 dropinInstance.clearSelectedPaymentMethod();
                                 console.log('Liability did not shift', payload);
-                                updatePayButton(PAY_NOW, false);
+                                updatePayButton(BT_PAY_NOW, false);
                                 return;
                             }
 
                             console.log('verification success:', payload);
                             //showNonce(payload);
-                            form.submit();
+                            braintreePaymentForm.submit();
                         });
                     });
 
@@ -148,7 +147,7 @@
                         // This will be true if you generated the client token
                         // with a customer ID and there is a saved payment method
                         // available to tokenize with that customer.
-                        updatePayButton(PAY_NOW, false);
+                        updatePayButton(BT_PAY_NOW, false);
                     }
 
                     dropinInstance.on('paymentMethodRequestable', function (event) {
@@ -157,7 +156,7 @@
                         // True if a customer has selected a payment method when paymentMethodRequestable fires.
                         //console.log(event.paymentMethodIsSelected);
 
-                        updatePayButton(PAY_NOW, false);
+                        updatePayButton(BT_PAY_NOW, false);
                     });
 
                     dropinInstance.on('noPaymentMethodRequestable', function () {
