--- a/src/Resources/views/Action/obtain_payment_method_nonce_dropin.html.twig
+++ b/src/Resources/views/Action/obtain_payment_method_nonce_dropin.html.twig
@@ -126,7 +126,7 @@
                                 return;
                             }
 
-                            var event = new Event('dropin.payload');
+                            var event = new Event('braintree.payload');
                             event.payload = payload;
                             document.dispatchEvent(event);
 
